--- a/app/blog/git/git-rebase-resolved-conflict/readme.mdx
+++ b/app/blog/git/git-rebase-resolved-conflict/readme.mdx
@@ -11,7 +11,7 @@
   unoptimized
 />
 
-### 1、合并代码
+## 1、合并代码
 
 现在使用rebase（变基），将`feat_bar`的提交`逐个“复制”`到`master`
 
@@ -32,7 +32,7 @@ git rebase master
   unoptimized
 />
 
-### 2、解决冲突
+## 2、解决冲突
 
 手动解决冲突后，依次输入如下命令
 
@@ -74,7 +74,7 @@ git rebase --continue
   unoptimized
 />
 
-### 3、更新master分支
+## 3、更新master分支
 
 现在需要将`master`分支进行更新，和`feat_bar`保持一致，输入如下命令
 
