--- a/app/blog/javascript/jsx/readme.mdx
+++ b/app/blog/javascript/jsx/readme.mdx
@@ -14,7 +14,7 @@
   </span>
 </div>
 
-### 1、TypeScript转换
+## 1、TypeScript转换
 
 安装typescript依赖，并进行配置相关的准备工作
 
@@ -74,7 +74,7 @@ pnpm i -D typescript
   )
   ```
 
-### 2、通过Babel插件转换成自定义的jsx
+## 2、通过Babel插件转换成自定义的jsx
 
 参考`react.createElement`，假设存在一个函数`Dom`，用来创建属于自己的虚拟节点
 
