--- a/app/blog/javascript/promise/readme.mdx
+++ b/app/blog/javascript/promise/readme.mdx
@@ -2,7 +2,7 @@
 
 根据[Promises/A+中文官网](https://promisesaplus.com.cn)，进行了简单的总结，本文的 `promise` 没有特别强调的情况下，都是指代码演示中 `new Promise 的实例`
 
-### 1、promise 流程
+## 1、promise 流程
 
 `[[Resolve]](promise, x)`表示
 
@@ -102,7 +102,7 @@ new Promise((resolve, reject) => {
   })
   ```
 
-### 2、then 方法
+## 2、then 方法
 
 ```js
 promise2 = promise.then(onFulfilled, onRejected)
@@ -156,7 +156,7 @@ promise2 = promise.then(onFulfilled, onRejected)
   )
   ```
 
-### 3、案例（根据上述要点）
+## 3、案例（根据上述要点）
 
 - 案列 1
 
