--- a/app/blog/javascript/this/readme.mdx
+++ b/app/blog/javascript/this/readme.mdx
@@ -4,7 +4,7 @@
 
 重点：判断一个运行中函数的 this 绑定，就需要找到这个函数的直接调用位置，`即this只能在调用时确定`
 
-### 1、默认调用
+## 1、默认调用
 
 ```js
 function foo() {
@@ -17,7 +17,7 @@ foo() // 10
 
 这种情况下，当调用这个函数时，this指向当前的上下文，也就是window，如果使用了严格模式，那么this指向的是undefined，就会报错
 
-### 2、隐式调用
+## 2、隐式调用
 
 ```js
 function foo() {
@@ -47,7 +47,7 @@ bar() // "oops, global" 这种形式其实是默认调用，所有指向window
 
 这种情况下，当调用这个函数时，this指向调用的那个对象，也就是obj
 
-### 3、显式调用
+## 3、显式调用
 
 ```js
 function foo() {
@@ -91,7 +91,7 @@ bar.call(window) // 2
 
 这种情况下，当调用这个函数时，this指向call的第一个参数，也就是obj
 
-### 4、new调用
+## 4、new调用
 
 JavaScript中的函数，并没有所谓的构造函数的概念，只是这个函数能用new进行构造调用，创建新对象
 
@@ -106,7 +106,7 @@ console.log(bar.a) // 2
 
 这种情况下，当调用这个函数时，this指向新创建的那个对象
 
-### 5、优先级
+## 5、优先级
 
 优先级如下
 
