--- a/app/blog/vite-dynamic-alias/readme.mdx
+++ b/app/blog/vite-dynamic-alias/readme.mdx
@@ -11,7 +11,7 @@
 </div>
 记录使用 vitest 结合 vscode 进行 debug 时，无法调试 ts 源代码的问题，并找到解决方案
 
-### 1、问题复现
+## 1、问题复现
 
 首先这个ts项目配置了`paths`
 
@@ -55,7 +55,7 @@ export default defineConfig({
   unoptimized
 />
 
-### 2、解决方案
+## 2、解决方案
 
 - 方案1
 
