--- a/app/blog/vue/vue3-reactive-use-ref/readme.mdx
+++ b/app/blog/vue/vue3-reactive-use-ref/readme.mdx
@@ -10,7 +10,7 @@ const reactiveValue = reactive(refValue)
 
 从ts类型来看，十分疑惑这个reactiveValue的类型`为什么是一个ref?`
 
-### 1、App.vue
+## 1、App.vue
 
 ```html filename="App.vue"
 <template>
@@ -34,7 +34,7 @@ const reactiveValue = reactive(refValue)
 </script>
 ```
 
-### 2、debug后发现
+## 2、debug后发现
 
 ```js
 function createReactiveObject(
