--- a/app/blog/algorithm/tree-traversal/readme.mdx
+++ b/app/blog/algorithm/tree-traversal/readme.mdx
@@ -2,7 +2,7 @@
 
 `前中后，分别代表父节点在遍历时的顺序`
 
-### 1、前序遍历
+## 1、前序遍历
 
 前序遍历就是先遍历自己，再遍历左子树，后遍历右子树
 
@@ -28,7 +28,7 @@ function dfs(node: TreeNode, result: number[] = []) {
 }
 ```
 
-### 2、中序遍历
+## 2、中序遍历
 
 中序遍历就是先遍历左子树，再遍历自己，后遍历右子树
 
@@ -54,7 +54,7 @@ function dfs(node: TreeNode, result: number[] = []) {
 }
 ```
 
-### 3、后序遍历
+## 3、后序遍历
 
 后序遍历就是先遍历左子树，再遍历右子树，最后遍历自己
 
