--- a/app/blog/css/property-animation/readme.mdx
+++ b/app/blog/css/property-animation/readme.mdx
@@ -1,6 +1,6 @@
 # 使用css自定义属性实现动画
 
-### 1、定义属性名
+## 1、定义属性名
 
 ```css filename="style.css"
 @property --gradient-end {
@@ -10,7 +10,7 @@
 }
 ```
 
-### 2、编写动画
+## 2、编写动画
 
 ```css filename="style.css"
 /* 抛光动画 */
@@ -37,6 +37,6 @@
 }
 ```
 
-### 3、动画效果如下
+## 3、动画效果如下
 
 <div className={`gradient mt-2 h-2 max-w-[400px]`}></div>
