--- a/app/blog/docker/mysql-app/readme.mdx
+++ b/app/blog/docker/mysql-app/readme.mdx
@@ -1,6 +1,6 @@
 # 使用 docker 部署 mysql 应用
 
-### 1、使用dockder compose管理容器
+## 1、使用dockder compose管理容器
 
 ```yml filename="docker-compose.yml"
 version: '3'
