--- a/app/blog/docker/readme.mdx
+++ b/app/blog/docker/readme.mdx
@@ -1,6 +1,6 @@
 # docker 常用命令
 
-### 1、镜像操作
+## 1、镜像操作
 
 - `docker pull 镜像名:版本 ` 拉取镜像
 - `docker rmi 镜像名:版本(或镜像id) ` 删除镜像
@@ -15,7 +15,7 @@
 
 - `docker build -f dockerfile文件路径 -t 镜像名称:版本 . ` 使用dockerfile制作镜像，默认使用当前目录的dockerfile，注意后面还跟了一个`“.”`
 
-### 2、容器操作
+## 2、容器操作
 
 - `docker ps ` 查看启动运行的容器
 - `docker ps -a ` 查看所有的容器
@@ -50,7 +50,7 @@
 
   输入`exit` 退出容器；如果运行容器时没有使用`-d`，那么退出时，容器也会关闭
 
-### 3、docker-compose 操作
+## 3、docker-compose 操作
 
 - `docker-compose build ` (可选)构建镜像
 - `docker-compose up ` 前台启动相关容器
