--- a/app/blog/vue/debug-vue-source-code/readme.mdx
+++ b/app/blog/vue/debug-vue-source-code/readme.mdx
@@ -2,7 +2,7 @@ import Image from 'next/image'
 
 # 使用vscode调试vue源码
 
-### 1、vue@2.7（简单粗暴的方式😂）
+## 1、vue@2.7（简单粗暴的方式😂）
 
 - 下载源码，并安装依赖
 
@@ -77,7 +77,7 @@ import Image from 'next/image'
 
     在vscode中打开新增的index.html文件，按`F5`即可打开调试模式
 
-### 2、vue@3（vitest方式）
+## 2、vue@3（vitest方式）
 
 - 下载源码，并安装依赖
 
