--- a/app/blog/vue/vue-router-4-navigation-guards-principle/readme.mdx
+++ b/app/blog/vue/vue-router-4-navigation-guards-principle/readme.mdx
@@ -4,7 +4,7 @@
 并按照守卫的顺序逐个执行。如果所有守卫都执行成功，则输出`成功导航`；如果任何一个守卫执行失败，则抛出`Invalid navigation guard`错误，
 并且后续的钩子函数就不会执行了
 
-### 1、注册导航守卫
+## 1、注册导航守卫
 
 通过发布订阅的方式，注册对应的导航守卫，并在正在导航时，`依次执行`对应的导航守卫函数
 
@@ -32,7 +32,7 @@ const beforeEachHooks = [
 ]
 ```
 
-### 2、导航入口
+## 2、导航入口
 
 导航函数会依次执行对应的钩子函数，并根据对应的钩子函数的结果，做不同的处理。如果没有问题，就进行导航跳转，反之抛出错误，第一个参数表示这次导航的目的，第二个参数表示这次导航的来源，这里简单用`"to" 和 "from" 两个字符串表示`
 
@@ -50,7 +50,7 @@ function navigate(to, from) {
 }
 ```
 
-### 3、核心原理
+## 3、核心原理
 
 navigate的核心原理，就是把用户传入的钩子函数，包装成promise，并进行链式调用。利用`promise链式调用`，
 可以做到依次执行钩子函数，无论这些钩子函数是同步函数还是异步函数
