chore: i[img](url) -> Image

--- a/app/blog/eslint-custom-rule/readme.mdx
+++ b/app/blog/eslint-custom-rule/readme.mdx
@@ -96,8 +96,21 @@ module.exports = {
 ```
 
 现在就可以检测到错误了
-![img](https://imgur.com/m3q4f6R.png)
-![img](https://imgur.com/SKev1JA.png)
+
+<Image
+  width={875}
+  height={78}
+  src={'https://imgur.com/m3q4f6R.png'}
+  alt='img'
+  unoptimized
+/>
+<Image
+  width={901}
+  height={145}
+  src={'https://imgur.com/SKev1JA.png'}
+  alt='img'
+  unoptimized
+/>
 
 此外，还可以使用`plugin的config参数和eslint的extends参数`简化配置
 [参考了eslint-plugin-vue](https://github.com/vuejs/eslint-plugin-vue/blob/master/lib/configs/base.js)，
