--- a/app/blog/vue/vue2.6-composition-api-commonjs-lib-error-solution/readme.mdx
+++ b/app/blog/vue/vue2.6-composition-api-commonjs-lib-error-solution/readme.mdx
@@ -16,83 +16,86 @@
 
 ## 1、客户端
 
-*   1、main.js
+- 1、main.js
 
-    ```js filename="main.js"
-    import Vue from 'vue'
-    import App from './App.vue'
-    import VueCompositionAPI from '@vue/composition-api'
+  ```js filename="main.js"
+  import Vue from 'vue'
+  import App from './App.vue'
+  import VueCompositionAPI from '@vue/composition-api'
 
-    Vue.use(VueCompositionAPI)
-    new Vue({
-      render: (h) => h(App),
-    }).$mount('#app')
-    ```
+  Vue.use(VueCompositionAPI)
+  new Vue({
+    render: (h) => h(App),
+  }).$mount('#app')
+  ```
 
-*   2、App.vue
+- 2、App.vue
 
-    ```html filename="App.vue"
-    <template>
-      <div id="app">
-        <TestDisplay></TestDisplay>
-      </div>
-    </template>
+  ```html filename="App.vue"
+  <template>
+    <div id="app">
+      <TestDisplay></TestDisplay>
+    </div>
+  </template>
 
-    <script setup>
+  <script setup>
     // lib 测试库
     import { TestDisplay } from 'zzz'
-    </script>
+  </script>
 
-    <style></style>
-    ```
+  <style></style>
+  ```
 
 ## 2、lib
 
-*   1、组件TestDisplay
+- 1、组件TestDisplay
 
-    ```html filename="TestDisplay.vue"
-    <template>
-      <div>{{ test.text }}</div>
-    </template>
-    <script>
-      import { reactive } from '@vue/composition-api'
-      export default {
-        setup() {
-          const test = reactive({ text: 'xxxxxxxx' })
-          console.log('only for setup', test)
-          return { test }
-        },
-      }
-    </script>
-    ```
-
-*   2、vue.config.js
-
-    ```js filename="vue.config.js"
-    const { defineConfig } = require('@vue/cli-service')
-    module.exports = defineConfig({
-      configureWebpack: {
-        externals: {
-          '@vue/composition-api': '@vue/composition-api',
-        },
+  ```html filename="TestDisplay.vue"
+  <template>
+    <div>{{ test.text }}</div>
+  </template>
+  <script>
+    import { reactive } from '@vue/composition-api'
+    export default {
+      setup() {
+        const test = reactive({ text: 'xxxxxxxx' })
+        console.log('only for setup', test)
+        return { test }
       },
-    })
-    ```
+    }
+  </script>
+  ```
 
-*   3、 `"build": "vue-cli-service build --mode production --target lib src/index.js"`
+- 2、vue.config.js
+
+  ```js filename="vue.config.js"
+  const { defineConfig } = require('@vue/cli-service')
+  module.exports = defineConfig({
+    configureWebpack: {
+      externals: {
+        '@vue/composition-api': '@vue/composition-api',
+      },
+    },
+  })
+  ```
+
+- 3、 `"build": "vue-cli-service build --mode production --target lib src/index.js"`
 
 在启动客户端时，发现就会报上述那个错误，"Error: [vue-composition-api] must call Vue.use(VueCompositionAPI) before using any function."
 
 我排查了下猜测是因为库文件和客户端使用的`@vue/composition-api入口不一样`导致这个问题的，`客户端使用esm的@vue/composition-api，而lib库是通过vue.config.js(webpack)打包，但只支持使用commonjs`
 
-
-![image.png](https://imgur.com/hKfa8tn.png)
+<Image
+  width={630}
+  height={419}
+  src={'https://imgur.com/hKfa8tn.png'}
+  alt='img'
+  unoptimized
+/>
 
 但是我把main.js 修改成`const VueCompositionAPI = require("@vue/composition-api");`，这样确实不会报`Error: [vue-composition-api] must call Vue.use`错误了
 
-
 但是composition-api就会报另一个错误`TypeError: Cannot read properties of undefined (reading 'text')"`
-
 
 ## 3、尝试用vite构建了一个es的包
 
