feat: enhance darkmode

--- a/app/blog/interview-eight-part-essay/readme.mdx
+++ b/app/blog/interview-eight-part-essay/readme.mdx
@@ -2,10 +2,10 @@
 
 ## 1、性能优化
 
-- 前端缓存([强缓存和协商缓存](https://juejin.cn/post/7083178636852854792))
+- 前端缓存([强缓存和协商缓存](https://github.com/linzhe141/cache-demo))
 - webpack gzip压缩(compression-webpack-plugin)，gzip有着比zip更优秀的压缩算法，可以有效的减少文件的大小。
 - 减少重排和重绘
-- [script的async和defer](https://twitter.com/wulianwen1/status/1724699387300069380)
+- [script的async和defer](https://x.com/wulianwen1/status/1724699387300069380)
 - 懒加载
 - 代码拆分，动态import
 
