--- a/app/blog/http/cors/readme.mdx
+++ b/app/blog/http/cors/readme.mdx
@@ -1,5 +1,7 @@
 # CORS[跨域资源共享] & OPTIONS
 
+> 相关代码：https://github.com/linzhe141/cors-demo
+
 ### CORS[跨域资源共享]
 
 是一种基于 HTTP 头的机制，该机制通过允许服务器标示除了它自己以外的其他源（域、协议或端口）
@@ -47,6 +49,24 @@ app.put('/foo', cors(), (req, res) => {
   res.send('Hello World!')
 })``
 ```
+
+当服务器向上面这样处理后，发送跨域请求时options请求就会拉到如下的响应头
+
+```js
+fetch('http://localhost:3000/foo', {
+  method: 'put',
+  // 复杂请求，当跨域时，浏览器会自动发送一个options请求
+  headers: {
+    fx: 'xxxx',
+  },
+})
+```
+
+![Image](https://github.com/user-attachments/assets/d620d142-9f0a-4bef-a31e-935475e65133)
+
+并且真正的请求也能够正常访问了
+
+![Image](https://github.com/user-attachments/assets/e511c443-008a-4fe7-8471-8e67cf09dd09)
 
 ### 反向代理
 
