--- a/app/blog/interview-eight-part-essay/readme.mdx
+++ b/app/blog/interview-eight-part-essay/readme.mdx
@@ -32,3 +32,7 @@ function say() {
   console.log('hi~')
 }
 ```
+
+## 浏览器工作原理
+
+[详情](https://developer.mozilla.org/zh-CN/docs/Web/Performance/Guides/How_browsers_work)
