--- a/app/blog/interview-eight-part-essay/readme.mdx
+++ b/app/blog/interview-eight-part-essay/readme.mdx
@@ -33,6 +33,6 @@ function say() {
 }
 ```
 
-## 浏览器工作原理
+## 4、浏览器工作原理
 
 [详情](https://developer.mozilla.org/zh-CN/docs/Web/Performance/Guides/How_browsers_work)
