--- a/posts/interview-eight-part-essay/readme.mdx
+++ b/posts/interview-eight-part-essay/readme.mdx
@@ -68,7 +68,7 @@ function say() {
   但是对于 `<script>` 标签（特别是没有 async 或者 defer 属性的）会阻塞渲染并停止 HTML 的解析。
 - 等待获取 CSS 不会阻塞 HTML 的解析或者下载，但是它确实会阻塞 JavaScript，因为 JavaScript 经常用于查询元素的 CSS 属性
 
-## 项目亮点
+## 项目亮点/展开聊聊
 
 - 封装了业务组件库（vue + setup + private npm），主要提供基于elementui二次封装和vue的`v-bind、v-on指令并且属性配置就是类json schema`form、dialog、table、layout、scss
   变量的theme主题[基于element官方的nodejs库](https://element.eleme.cn/#/zh-CN/component/custom-theme)。
@@ -139,3 +139,15 @@ function say() {
 
   console.log('✅ Migration complete.')
   ```
+
+## 为什么离职
+
+我上一份工作的内容是 XXX，在那段时间里我收获了很多，也积累了扎实的 YYY 经验。
+不过在后期我也发现，这份工作在技术成长和挑战性方面已经相对稳定，而我本身是一个比较喜欢学习和探索的人，
+所以希望能寻找一个更有发展空间、能够接触新技术并参与到关键项目的团队。我觉得贵公司在这方面非常契合我的预期。
+
+## 你为什么值这份薪资
+
+我的上一份薪资是??，当时是基于我当时的经验和岗位要求定的。而在这段时间里，我不仅独立承担了多个完整的模块开发，也逐步参与了系统架构优化、性能调优和一些跨团队协作的工作，整体的技术深度和广度都有明显提升。
+比如在某个项目中，我通过 XXX 的优化手段，把首页加载时间从 3.2s 优化到 1.8s，用户留存率提升了明显，这类工作也让我意识到，我的输出是可以给业务带来实在价值的。
+结合市场行情和我对岗位的理解，我认为 ?? 是一个比较合理的匹配，当然我也更看重的是未来的成长空间和团队氛围。
