--- a/posts/vue/pr-11159/readme.mdx
+++ b/posts/vue/pr-11159/readme.mdx
@@ -1,7 +1,7 @@
 # [vue] innerHTML patch edge case with h
 
 > 我看你提交了一些VUE相关的pr，能说说解决了什么问题吗？
-> 这是一个面试题，但我没准备,所以我要引导到这个pr，因为这个pr稍微有代表性一点，有一点复杂度
+> 这是一个面试题，但我没准备，所以我要引导到这个pr，因为这个pr稍微有代表性一点，有一点复杂度
 
 [具体pr链接](https://github.com/vuejs/core/pull/11159)
 
